--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node app.js"
+    "start": "ts-node app.js",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
