--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,6 @@
  			  "skipLibCheck": true,
  			  "forceConsistentCasingInFileNames": true
  			},
- 			"include": ["*.ts"],
+ 			"include": ["services/**/*.ts"],
  		   "exclude": ["node_modules"]
  }
