Feature/data comments (#10)
* Test (#6)

* feature: write vertical line for customer, order, product, certificate

Add services, controllers, routes for models Shopify. And configurations : Shopify service, graphQL service and dbContext.

* feature: add queries to MongoDB for order model

* feature:jwt auth

* fix: change dotenv to config and do some refactoring

* refactor: add generic method into mailSender, add options to config

* feature : add Subscribe and Blog verticals

-services
-controllers
-models
-routes

* fix:  add configurations and refactor productController

configurations:
-for typescript files
-logger
-Dockerfile

---------

Co-authored-by: zhuvakAnd <125382431+zhuvakAnd@users.noreply.github.com>

* Feature/configuration (#7)

* feature: write vertical line for customer, order, product, certificate

Add services, controllers, routes for models Shopify. And configurations : Shopify service, graphQL service and dbContext.

* feature: add queries to MongoDB for order model

* feature:jwt auth

* fix: change dotenv to config and do some refactoring

* refactor: add generic method into mailSender, add options to config

* feature : add Subscribe and Blog verticals

-services
-controllers
-models
-routes

* fix:  add configurations and refactor productController

configurations:
-for typescript files
-logger
-Dockerfile

* feature: add pipeline

* refactor: add build command

* refactor: rename pipeline

* Feature/configuration (#8)

* feature: write vertical line for customer, order, product, certificate

Add services, controllers, routes for models Shopify. And configurations : Shopify service, graphQL service and dbContext.

* feature: add queries to MongoDB for order model

* feature:jwt auth

* fix: change dotenv to config and do some refactoring

* refactor: add generic method into mailSender, add options to config

* feature : add Subscribe and Blog verticals

-serv

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,3 +26,11 @@ jobs:
 
     - name: Test
       run: npm test
+
+    - name: Cancel workflow on failure
+      if: failure()
+      run: |
+        echo "The workflow has failed. Cancelling the commit..."
+        git reset --soft HEAD^
+        git commit -m "Automatically cancelled the commit due to workflow failure"
+        git push --force
