--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-	  "test": "echo \"Error: no test specified\" && exit 1",
+	  "test": "echo \"Error: no test specified\"",
 	  "start": "ts-node app.js",
 	  "build": "tsc"
 	},
@@ -35,4 +35,4 @@
 	  "typescript": "^5.4.3"
 	}
  }
- 
+
